[package]
name = "gadget-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
gadget-io = { workspace = true, default-features = false, features = ["default"] }
gadget-common = { workspace = true, default-features = false, features = ["default"] }
gadget-core = { workspace = true }
shell-sdk = { workspace = true }
protocol-macros = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.30"
itertools = "0.10.5"
rand = "0.8.5"
round-based-21 = { workspace = true }
sp-core = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.117" }
tokio-process = { version = "0.2.5" }
tokio-io = { version = "0.1.13" }
tokio = { workspace = true }
futures-lite = { version = "2.3.0" }
failure = { version = "0.1.8" }
nix = { version = "0.29.0", features = ["process", "signal"] }
sysinfo = { version = "0.30.12" }
procfs = { version = "0.16.0" }

[dev-dependencies]
test-utils = { workspace = true }

[[bin]]
name = "protocol"
path = "src/main.rs"