[package]
name = "zcash-frost-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "shell-sdk/std",
    "gadget-io/std",
    "gadget-common/std",
]
wasm = [
    "shell-sdk/wasm",
    "gadget-io/wasm",
    "gadget-common/wasm",
]

[dependencies]
shell-sdk = { workspace = true, default-features = false }
thiserror = { workspace = true }
#tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
gadget-io = { workspace = true, default-features = false }
gadget-common = { workspace = true, default-features = false }
gadget-core = { workspace = true }
protocol-macros = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
curv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
round-based-21 = { workspace = true, features = ["derive"]}
digest = { workspace = true }
sha2 = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }

udigest = { workspace = true }
frost-core = { workspace = true, features = ["cheater-detection"] }
frost-ed25519 = { workspace = true }
frost-ed448 = { workspace = true }
frost-p256 = { workspace = true }
frost-p384 = { workspace = true }
frost-ristretto255 = { workspace = true }
frost-secp256k1 = { workspace = true }
frost-rerandomized = { workspace = true }

sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
frame-support = { workspace = true  }
parity-scale-codec = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }
tangle-primitives = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "protocol"
path = "src/main.rs"