[package]
name = "zcash-frost-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasm"]
std = [
    "shell-sdk/std",
    "gadget-io/std",
    "gadget-common/default",
    "sp-core/std",
    "sp-io/std",
    "sp-api/std",
    "frame-support/std",
]
wasm = [
    "shell-sdk/wasm",
    "gadget-io/wasm",
    "gadget-common/wasm",
    "gadget-common/tangle-testnet",
    "sp-core/serde",
    "sp-core/full_crypto",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
]

[dependencies]
shell-sdk = { workspace = true, default-features = false }
thiserror = { workspace = true }
gadget-io = { workspace = true, default-features = false }
gadget-common = { workspace = true, default-features = false }
gadget-core = { workspace = true }
protocol-macros = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
round-based-21 = { workspace = true, features = ["derive"]}
digest = { workspace = true }
sha2 = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }

udigest = { workspace = true }
frost-core = { workspace = true, features = ["cheater-detection"] }
frost-ed25519 = { workspace = true }
frost-ed448 = { workspace = true }
frost-p256 = { workspace = true }
frost-p384 = { workspace = true }
frost-ristretto255 = { workspace = true }
frost-secp256k1 = { workspace = true }
frost-rerandomized = { workspace = true }

sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tangle-primitives = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
test-utils = { workspace = true, default-features = false, features = ["std"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
test-utils = { workspace = true, default-features = false, features = ["wasm"] }
wasm-bindgen-test = "0.3.34"

[lib]
name = "zcash_frost"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "protocol"
path = "src/main.rs"